registry/harbor/manifests/harbor.ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: harbor
spec: {}
status: {}
